manifests/seraphim/prod/monitoring/HTTPRoute-vl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: vl
  namespace: monitoring
spec:
  hostnames:
    - vl.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vlsingle-victoria-logs
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
